--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
-    - name: npm install, build, and test
+    - name: npm install, audit, lint and test
       run: |
         npm ci
         npm audit
