--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,10 +13,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
-    - name: npm install, audit, lint and test
+    - name: npm install, lint and test
       run: |
         npm ci
-        npm audit
         npm run lint
         # npm test
       env:
