--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "superagent": "^5.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.1",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
@@ -34,7 +35,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
