--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
+    "nock": "^12.0.1",
     "supertest": "^4.0.2",
     "typescript": "^3.7.5"
   },
