--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "superagent": "^5.2.1"
+    "superagent": "^5.2.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.1",
+    "@types/jest": "^25.1.4",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
@@ -34,8 +35,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "nock": "^12.0.1",
+    "jest": "^25.1.0",
+    "nock": "^12.0.2",
     "supertest": "^4.0.2",
     "typescript": "^3.7.5"
   },
