--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/convict": "^4.2.1",
+    "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
+    "@types/supertest": "^2.0.8",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
