--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
-    "javascript.implicitProjectConfig.checkJs": true
+    "javascript.implicitProjectConfig.checkJs": true,
+    "cSpell.words": [
+        "taskid",
+        "unclaim",
+        "webhooks"
+    ]
 }
