Refactors tasks to use the same conventions as users
Resolves #29

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,11 @@
     },
     "javascript.implicitProjectConfig.checkJs": true,
     "cSpell.words": [
+        "Trello",
+        "Trello's",
         "taskid",
         "unclaim",
         "webhooks"
-    ]
+    ],
+    "nixEnvSelector.nixShellConfig": "${workspaceRoot}/shell.nix"
 }
