Allows running the app with `npx cityzen-server`

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lint": "eslint .",
     "test": "jest"
   },
+  "bin": {
+    "cityzen-server": "./index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codeforlansing/cityzen-server.git"
