--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "superagent": "^5.2.1",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
