--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
     "convict": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "superagent": "^5.2.1",
-    "uuid": "^7.0.2",
+    "helmet": "^3.23.3",
+    "superagent": "^5.3.1",
+    "uuid": "^7.0.3",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
-    "@types/express": "^4.17.3",
-    "@types/jest": "^25.1.4",
-    "@types/supertest": "^2.0.8",
+    "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.3",
+    "@types/supertest": "^2.0.10",
     "eslint": "^6.7.2",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "nock": "^12.0.2",
+    "pkg": "^4.4.9",
     "supertest": "^4.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.6"
   },
   "husky": {
     "hooks": {
