--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "package": "nexe ."
   },
   "bin": {
     "cityzen-server": "./index.js"
@@ -25,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "nexe": "^3.3.7",
     "superagent": "^5.3.1",
     "uuid": "^7.0.3",
     "yargs": "^15.3.1"
@@ -44,9 +46,11 @@
     "husky": "^3.1.0",
     "jest": "^25.5.4",
     "nock": "^12.0.2",
-    "pkg": "^4.4.9",
     "supertest": "^4.0.2",
     "typescript": "^3.9.6"
+  },
+  "engines": {
+    "node": ">=12"
   },
   "husky": {
     "hooks": {
