Trying to get the builder to build

--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -8,6 +8,16 @@ name: Upload Release Asset
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm ci
+      - run: npm test
+  release:
+    needs: build
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
@@ -16,7 +26,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run package
+      - run: npm run package -- --build
       - run: zip dist/cityzen-server* cityzen-server.zip
       - name: Create Release
         id: create_release
