--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -70,11 +70,11 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
   publish-executables:
-    name: Publish Executables for ${{ matrix.os }}
+    name: Publish Executables
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest ubuntu-latest macos-latest ]
+        os: [ windows-latest, ubuntu-latest, macos-latest ]
     needs: publish-release
     steps:
       - uses: actions/checkout@v2
