--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,10 +32,15 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run package -- --build
-      - run: zip cityzen-server cityzen-server.zip
+      - name: package for unix
+        run: |
+          npm run package -- --build
+          zip cityzen-server cityzen-server.zip
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
-      - run: zip cityzen-server.exe cityzen-server.zip
+      - name: package for windows
+        run: |
+          npm run package
+          zip cityzen-server.exe cityzen-server.zip
         if: ${{ matrix.os == 'windows-latest' }}
       - uses: actions/upload-artifact@v2
         env:
