--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,7 +40,7 @@ jobs:
       - name: package for windows
         run: |
           npm run package
-          zip cityzen-server.exe cityzen-server.zip
+          Compress-Archive cityzen-server.exe cityzen-server.zip
         if: ${{ matrix.os == 'windows-latest' }}
       - uses: actions/upload-artifact@v2
         env:
