--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,11 +30,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 12.18.2
       - run: npm ci
       - name: package for unix
         run: |
-          npm run package -- --build
+          npm run package
           zip cityzen-server cityzen-server.zip
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
       - name: package for windows
