Allows other artifacts to be built even if some fail

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,12 +25,13 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-latest, macos-latest ]
+        fail-fast: false
     needs: build
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.18.2
+          node-version: 12
       - run: npm ci
       - name: package for unix
         run: |
