--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -81,12 +81,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.18.2
+          node-version: 12
       - run: npm ci
       - name: package for unix
         run: |
-          npm run package || npm run package -- --build
-          zip cityzen-server cityzen-server.zip
+          npm run package
+          zip cityzen-server.zip cityzen-server
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
       - name: package for windows
         run: |
