--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: |
-        npm ci
-        npm run lint
-        npm test
+        run: |
+          npm ci
+          npm run lint
+          npm test
   release:
     needs: build
     name: Upload Release Asset
