--- a/.github/workflows/tag-release-publish.yml
+++ b/.github/workflows/tag-release-publish.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       released: ${{ steps.released.outputs.status }}
+      upload_url: ${{ steps.autorelease.outputs.upload_url }}
     steps:
     - uses: actions/checkout@v2
     # Creates a new tag when a new version is discovered in package.json
@@ -101,7 +102,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.publish-release.outputs.upload_url }}
+          upload_url: ${{ needs.build.outputs.upload_url }}
           asset_path: ./cityzen-server.zip
           asset_name: cityzen-server-${{ matrix.os }}.zip
           asset_content_type: application/zip
