--- a/.github/workflows/tag-release-publish.yml
+++ b/.github/workflows/tag-release-publish.yml
@@ -116,11 +116,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 12.16.2
       - run: npm ci
       - run: npm run lint
       - run: npm test
-      - run: npm run package -- --build
+      - run: npm run package
       - run: zip dist/cityzen-server* cityzen-server.zip
       - id: upload-release-asset
         uses: actions/upload-release-asset@v1
