--- a/.github/workflows/tag-release-publish.yml
+++ b/.github/workflows/tag-release-publish.yml
@@ -121,7 +121,7 @@ jobs:
       - run: npm run lint
       - run: npm test
       - run: npm run package
-      - run: zip dist/cityzen-server* cityzen-server.zip
+      - run: zip cityzen-server.zip cityzen-server
       - id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
